--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,10 @@
     "test:watch": "jest --watch",
     "pretest:cov": "npm run lint",
     "test:cov": "jest --coverage",
-    "start": "webpack-dev-server --mode development --hot --progress --color --port 3000 --open",
+    "start": "webpack serve --mode development --hot --progress --color --port 3000 --open",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "build:prod": "webpack -p --progress --colors",
-    "build": "webpack --mode development --progress --colors",
+    "build:prod": "webpack -p --progress",
+    "build": "webpack --mode development --progress",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "license": "MIT",
@@ -42,9 +42,9 @@
     "enzyme-to-json": "^3.3.5",
     "file-loader": "^4.0.0",
     "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.4",
+    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^7.0.39",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^12.0.1",
@@ -60,11 +60,11 @@
     "ts-jest": "^27.1.4",
     "ts-loader": "^6.0.4",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
+    "typescript": "^4.6.3",
     "url-loader": "^2.0.1",
-    "webpack": "^4.35.3",
+    "webpack": "^5.72.0",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^3.3.5",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
@@ -80,8 +80,8 @@
     "axui-contextmenu": "^0.4.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^4.5.0",
-    "dotenv": "^8.0.0",
-    "dotenv-webpack": "^1.7.0",
+    "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "jest": "^27.5.1",
     "moment": "^2.29.3",
     "oauth-sign": "^0.9.0",
@@ -132,7 +132,9 @@
       "raf/polyfill"
     ],
     "testRegex": ".*(spec|test)\\.(ts|tsx|js)$",
-    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.ts",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.ts"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json"
     ],
